@@ -2,7 +2,7 @@
          'nofoundrows' => 0,
          'ssl' => 0,
          'testdb' => 'test',
-         'cflags' => '-I/usr/local/libdrizzle',
+         'cflags' => '-I/usr/local/drizzle/include',
          'nocatchstderr' => 0,
          'libs' => '-L/usr/local/lib -ldrizzle -lz -lm -lcrypt -lnsl'
        };
